# flatbuffers

./: CMakeLists.txt
CMake/: flatbuffersConfig.cmake  flatbuffersTools.cmake
docs/source/: Building.md
python/: flatbuffers.cpp  setup.cfg  setup.py
